Bug 65444 - obsolete call for miInitializeBackingStore(pScreen); in src/savage_driver.c
Summary: obsolete call for miInitializeBackingStore(pScreen); in src/savage_driver.c
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/savage (show other bugs)
Version: git
Hardware: All All
: medium normal
Assignee: Tormod Volden
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-06 08:52 UTC by Alexander Grothe
Modified: 2013-09-19 20:12 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Alexander Grothe 2013-06-06 08:52:41 UTC
Hello,
today I tried Arch Linux with xorg-server 1.14.1 on an old Laptop with a S3 Graphics Ltd. VT8375 [ProSavage8 KM266/KL266].

When I tried to start X I got this error:
/usr/bin/X: symbol lookup error: /usr/lib/xorg/modules/drivers/savage_drv.so: undefined symbol: miInitializeBackingStore

Removing this call from the driver fixes the problem:

--- xf86-video-savage-2.3.6/src/savage_driver.c 2012-07-16 04:38:19.000000000 +0200
+++ b/src/savage_driver.c       2013-06-06 11:01:48.916227010 +0200
@@ -3408,7 +3408,6 @@ static Bool SavageScreenInit(SCREEN_INIT
        SavageInitAccel(pScreen);
     }

-    miInitializeBackingStore(pScreen);
     xf86SetBackingStore(pScreen);

     if( !psav->shadowFB && !psav->useEXA )


As far as I can see this call is still used in the git repository:
http://cgit.freedesktop.org/~tormod/xf86-video-savage/tree/src/savage_driver.c#n3415

Kind regards,

Alexander Grothe
Comment 1 Tormod Volden 2013-09-19 20:12:41 UTC
Thanks for your report and fix. This has been committed to git now.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.