Drop miInitializeBackingStore() call

It was only needed up to xserver 1.4 and is not supported in the
recent xserver versions.

Thanks to Alexander Grothe for reporting the issue and providing
the fix.

https://bugs.freedesktop.org/show_bug.cgi?id=65444

> commit 1cb0261ef54b7dd6a7ef84e1c3959e424706228b
> Author: Daniel Martin <consume.noise@gmail.com>
> Date:   Thu Sep 6 00:38:26 2012 +0200
>
>    dix: Delete mibstore.h
>
>    Since Nov 2010 (commit c4c4676) the only purpose of mibstore.h was to
>    define an empty function (miInitializeBackingStore()) for backward
>    compatibility. Time to say goodbye.

Signed-off-by: Tormod Volden <debian.tormod@gmail.com>